--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -74,13 +75,21 @@ dependencies {
 
 
     implementation 'com.github.GrenderG:Toasty:1.4.2'
+    //otp
     implementation 'com.github.mukeshsolanki:android-otpview-pinview:2.1.0'
-
+    //coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7'
-
+    //progress Dialog
     implementation 'com.github.d-max:spots-dialog:1.1@aar'
+    //circle image view
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    //image cropper
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
 
-
+    //room Database
+    def room_version = "2.2.5"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
 }
